--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
-    "hardhat": "^2.8.4"
+    "hardhat": "^2.8.4",
+    "openzeppelin-solidity": "^3.3.0",
+    "web3": "^1.3.0"
   }
 }
